# itf-raft

./: Cargo.toml  memo.md
proto/: raft.proto
src/: main.rs  node.rs  rpc.rs  state.rs
src/rpc/: mod.rs
src/rpc_server/: mod.rs
src/state/: candidate.rs  follower.rs  inner_state.rs  leader.rs  mod.rs
