[package]
name = "itf-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
prost = "0.12.3"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = "1.35.1"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
